<resources>
    <string name="app_name">BmiCalc</string>
    <string name="hello_world">hello World</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight [kg]</string>
    <string name="height">Height [cm]</string>
    <string name="bmi_rechner">BMI Rechner</string>
</resources>